# casino-mcp-cliente

./: .env.example  .gitignore  README.md  pyproject.toml
.github/instructions/: develop.instructions.md
casino_agent/: root_agent.py
casino_agent/agents/: __init__.py  root_agent.py
casino_agent/core/: __init__.py  utils.py
casino_agent/schemas/: get_promotion_by_id.json
casino_agent/tools/: get_promotion_by_id.py  list_promotions_by_country.py
jgl_mcp_client/: __init__.py  root_agent.py
jgl_mcp_client/agent/: __init__.py  root_agent.py
mcp_client/: __init__.py  utils.py
mcp_client/schemas/: list_promotions_by_country.json  loader.py
mcp_client/tools/: data.py  get_promotion_by_id.py  list_promotions_by_country.py
