[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casino-agent"
version = "0.1.0"
description = "ADK Agent for casino promotions with MCP tools integration"
authors = [{ name = "JGL" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2.1",
  "jsonschema>=4.22.0",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["."]
include = ["jgl_mcp_client*", "mcp_client*"]
